# shim-rag-test-sample-python-2

./: README.md  pyproject.toml
.github/actions/local/: action.yml
.github/workflows/: ci.yml
reporting_app/: __init__.py  client.py  handlers.py  pipeline.py
scripts/: check_status.sh  nightly_report.sh
tests/: test_handlers.py
