[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reporting-app"
version = "1.0.0"
description = "Downstream reporting app that consumes ingestion-utils (cross-repo review fixture)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    # The cross-repo edge under test: this app imports the `ingestion_utils`
    # package published by shim-rag-test-sample-python-1.
    "ingestion-utils @ git+https://github.com/cognizhi/shim-rag-test-sample-python-1@main",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["reporting_app*"]
